# swsh_event_dumper

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  nest_hole_distribution_encounter8archive_generated.rs
