[package]
name = "swsh_event_dumper"
version = "0.1.0"
authors = ["Steve Cook <steviecook210@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A tool for dumping event raids from Pokemon SWSH"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "2.0.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
hex = "0.4.3"